--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
   "author": "@devjana",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
     "mongoose": "^4.5.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SF-Felling7/MEANie.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SF-Felling7/MEANie/issues"
+  },
+  "homepage": "https://github.com/SF-Felling7/MEANie#readme"
 }
